crates/parser/src/snapshots/parser__tests__parse_inline_err@0167_as_pat_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(as )\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0167_as_pat_no_pat.ath
---
NAMED_PAT
  L_PAREN "("
  AS_KW "as"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 0: a named pattern must have a name
error 3: expected a pattern to bind to

