crates/parser/src/snapshots/parser__tests__parse_inline_err@0173_prefix_let_rec_expr_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "(letrec ((foo 1) (bar 2)))\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0173_prefix_let_rec_expr_no_body.ath
---
PREFIX_LET_REC_EXPR
  L_PAREN "("
  LETREC_KW "letrec"
  WHITESPACE " "
  L_PAREN "("
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "foo"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "1"
    R_PAREN ")"
  WHITESPACE " "
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "2"
    R_PAREN ")"
  R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"
error 25: Expected to find a body (phrase) for the prefix letrec expression

